--- a/overlay/frameworks/base/core/res/res/xml/storage_list.xml
+++ b/overlay/frameworks/base/core/res/res/xml/storage_list.xml
@@ -36,6 +36,7 @@
     <storage android:mountPoint="/mnt/sdcard"
     		 android:storageDescription="@string/storage_sd_card"
     		 android:primary="true"
+                 android:removable="true"
                  android:emulated="true"
     		 android:allowMassStorage="true"
     		 android:mtpReserve="100" />
